--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+	
+	<h2>Projects</h2>
+	<ul>
+		<li><a href="https://lcanderson.github.io/BeachParadise/">Beach Paradise</a></li>
+		<li><a href="https://lcanderson.github.io/excursion/">Excursion Project</a></li>
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+	</ul>
+	
+  </body>
+</html>
