--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<ul>
 		<li><a href="https://lcanderson.github.io/BeachParadise/">Beach Paradise</a></li>
 		<li><a href="https://lcanderson.github.io/excursion/">Excursion Project</a></li>
-		<li><a href="https://lcanderson.github.io/broadway/"></a>Broadway Project</li>
+		<li><a href="https://lcanderson.github.io/broadway/">Broadway Project</a></li>
 		<li><a href=""></a></li>
 		<li><a href=""></a></li>
 	</ul>
