Add Davies Burgers project.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<li><a href="https://lcanderson.github.io/BeachParadise/">Beach Paradise</a></li>
 		<li><a href="https://lcanderson.github.io/excursion/">Excursion Project</a></li>
 		<li><a href="https://lcanderson.github.io/broadway/">Broadway Project</a></li>
-		<li><a href=""></a></li>
+		<li><a href="https://lcanderson.github.io/daviesburgers/">Davie&apos;s Burgers</a></li>
 		<li><a href=""></a></li>
 	</ul>
 	
