--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li><a href="https://lcanderson.github.io/excursion/">Excursion Project</a></li>
 		<li><a href="https://lcanderson.github.io/broadway/">Broadway Project</a></li>
 		<li><a href="https://lcanderson.github.io/daviesburgers/">Davie&apos;s Burgers</a></li>
-		<li><a href=""></a></li>
+		<li><a href="https://lcanderson.github.io/CapstoneColmar/"></a>Colmar Academy</li>
 	</ul>
 	
   </body>
